--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -6,4 +6,7 @@
 [[constraint]]
   name = "github.com/jstemmer/go-junit-report"
   branch = "master"
- 
+
+[[constraint]]
+  name = "github.com/karlkfi/inject"
+  branch = "master"
