--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,9 +1,8 @@
-
 [[constraint]]
   name = "github.com/docopt/docopt-go"
   version = "0.6.2"
 
-[[constraint]]
+[[override]]
   name = "github.com/jstemmer/go-junit-report"
   branch = "master"
 
